openshift/apps/roboflow-robot/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: roboflow-robot
  labels:
    app: roboflow-robot
    openshift.io/cluster-monitoring: "false"
    pod-security.kubernetes.io/enforce: privileged
    #pod-security.kubernetes.io/audit: privileged
    #pod-security.kubernetes.io/warn: privileged
