openshift/apps/roboflow-robot/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roboflow-robot
  namespace: roboflow-robot
  labels:
    app: roboflow-robot
spec:
  selector:
    matchLabels:
      app: roboflow-robot
  replicas: 1
  template:
    metadata:
      labels:
        app: roboflow-robot
    spec:
      serviceAccountName: roboflow-robot
      volumes:
        - name: rf-data
          persistentVolumeClaim:
            claimName: rf-data
      containers:
        - name: roboflow-robot
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '500m'
              memory: 500Mi
          image: quay.io/kenmoini/roboflow-robot:latest
          volumeMounts:
            - name: rf-data
              mountPath: /tmp/roboflow/data
          ports:
            - containerPort: 7272
              protocol: TCP
  strategy:
    type: Recreate
