openshift/apps/roboflow-robot/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: roboflow-robot
  namespace: roboflow-robot
  labels:
    app: roboflow-robot
spec:
  selector:
    app: roboflow-robot
  ports:
    - protocol: TCP
      port: 7272
      targetPort: 7272
